# templates

./: .prettierignore  README.md  bun.lockb  package.json  templates.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml
commonjs-package/: .eslintrc  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
commonjs-package/.github/workflows/: lint.yml  release.yml
commonjs-package/test/: index.test.mjs
scripts/: format.ts  formatTemplates.ts  generate.ts  generateReadme.ts  utils.ts
solidjs/bare/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
solidjs/bare/src/: root.css  root.tsx
solidjs/bare/src/routes/: index.tsx  (+1 more)
solidjs/tailwind/: README.md  package-lock.json  package.json  pnpm-lock.yaml
solidjs/tailwind/src/: root.tsx
solidstart-app/: .gitignore  README.md  components.json  package.json  tsconfig.json  vite.config.ts
solidstart-app/public/: site.webmanifest
templates/commonjs-package/: .eslintrc  README.md  package.json  pnpm-lock.yaml
templates/rust-cli/: Cargo.toml  README.md
templates/rust-cli/.github/workflows/: build.yml  release.yml
templates/rust-cli/scripts/: build.sh
templates/rust-cli/src/: main.rs
templates/solidstart-app/: .eslintrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
templates/typescript-cli/: .eslintrc  README.md  build.config.ts  package.json  pnpm-lock.yaml
templates/typescript-package/: README.md  package.json  pnpm-lock.yaml
typescript-package/: .eslintrc  package.json  pnpm-lock.yaml  tsconfig.json
typescript-package/test/: index.test.ts
(+20 files in other folders)
